[gd_scene load_steps=17 format=3 uid="uid://cgdg3pcfg1aah"]

[ext_resource type="Texture2D" uid="uid://6ox2iiv4eo70" path="res://assets/character_tileset/Mage_.png" id="1_0bnu1"]
[ext_resource type="Script" uid="uid://bnls11frldrbi" path="res://boss.gd" id="1_6xxrv"]
[ext_resource type="Script" uid="uid://d2bbhg0wjk62a" path="res://scenes_and_scripts/health_component.gd" id="2_o1i15"]
[ext_resource type="Script" uid="uid://dbu08eym18n84" path="res://resources/enemy_resource.gd" id="2_we8h1"]
[ext_resource type="PackedScene" uid="uid://celm56g665rwr" path="res://scenes_and_scripts/hit_box.tscn" id="3_o1i15"]
[ext_resource type="PackedScene" uid="uid://3jomb47e456g" path="res://scenes_and_scripts/hurt_box.tscn" id="5_we8h1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kvofc"]
radius = 107.6

[sub_resource type="Resource" id="Resource_ef0k6"]
script = ExtResource("2_we8h1")
health = 500
attack = 20
speed = 50
shape = SubResource("CircleShape2D_kvofc")
metadata/_custom_type_script = "uid://dbu08eym18n84"

[sub_resource type="Animation" id="Animation_skx2t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_6xxrv"]
resource_name = "idle"
length = 0.85715
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_we8h1"]
resource_name = "move"
length = 0.35715
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_kvofc"]
resource_name = "retreat"
step = 0.0714286
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"change_state"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.476485, 0.547914, 0.619343, 0.690771, 0.7622, 0.833628, 0.950101, 1.02153, 1.09296, 1.16439, 1.23581, 1.30724, 1.42802, 1.49945, 1.57088, 1.64231, 1.71374, 1.78516, 1.89733, 1.96876, 2.04019, 2.11162, 2.18305, 2.25447, 2.36879, 2.44022, 2.51165, 2.58308, 2.65451, 2.72594, 2.85714, 2.92857, 3, 3.07143, 3.14286, 3.21429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_lnbgr"]
resource_name = "shoot"
length = 0.642864
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.285714, 0.642857),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_meteor"
}, {
"args": [3],
"method": &"change_state"
}]
}

[sub_resource type="Animation" id="Animation_o1i15"]
resource_name = "shoot2"
length = 0.571436
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.571429),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3],
"method": &"change_state"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvofc"]
_data = {
&"RESET": SubResource("Animation_skx2t"),
&"idle": SubResource("Animation_6xxrv"),
&"move": SubResource("Animation_we8h1"),
&"retreat": SubResource("Animation_kvofc"),
&"shoot": SubResource("Animation_lnbgr"),
&"shoot2": SubResource("Animation_o1i15")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ef0k6"]

[node name="Boss" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_6xxrv")
resource = SubResource("Resource_ef0k6")
retreat_point = Array[Vector2]([Vector2(0, 0), Vector2(0, 150), Vector2(0, -50), Vector2(100, 150)])

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_o1i15")
metadata/_custom_type_script = "uid://d2bbhg0wjk62a"

[node name="HitBox" parent="." instance=ExtResource("3_o1i15")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_kvofc")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_0bnu1")
offset = Vector2(30.05, 0)
hframes = 10
vframes = 6
frame = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 25)
shape = SubResource("CircleShape2D_ef0k6")
debug_color = Color(0, 0.640041, 0.355851, 0.42)

[node name="RetreatTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource("5_we8h1")]
collision_mask = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 9)

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RetreatTimer" to="." method="_on_retreat_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HurtBox"]
